# fintrack

./: FinTrack.hs  README  fintrack.cabal
Crm/: Crm.hs
FinTrack/: Categorise.hs  Date.hs  Trainer.hs  Transaction.hs
